# cryptography_course

./: .gitignore  Makefile  README.md  crypto.c  crypto.h  main.c
aes/: Makefile  crypto.c  crypto.h  main.c  temp.c
aes/aes_algor/: .gitignore  Cargo.toml
aes/aes_algor/src/: main.rs
aes/aes_algor/src/lib/: Algor.rs  basic_operations.rs  enc_decrypt.rs  encrypt.rs  gen_key.rs  key_msg.rs  mod.rs  op_modes.rs
aes/aes_algor/src/tests/: mod.rs
aes/c_impl/: Makefile  README.md  crypto.c  crypto.h  main.c
attack_algor/: Cargo.toml
attack_algor/src/: main.rs
rsa/attack_algor/: Cargo.toml
rsa/attack_algor/src/: main.rs
rsa/attack_rsa/: Makefile  dec.h  dec_rsa.cpp
rsa/rsa_project/: Cargo.toml  cipher  cli.yml  example.md  file  plaintext
rsa/rsa_project/src/: main.rs  tests.rs
rsa/rsa_project/src/lib/: attack.rs  cipher_plain.rs  key.rs  mod.rs  primality_test.rs  rsa.rs
sha3/: Cargo.toml  bench_res
sha3/src/: lib.rs  main.rs  tests.rs
sha3/src/benches/: keccak_bench.rs  mod.rs
