[package]
name = "sha3"
version = "0.1.0"
authors = ["Karl Han <karl-han@iwktd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.17.4"
bencher = "0.1.5"
tiny-keccak = { version = "2.0", features = ["sha3"] }
rand = "0.7.2"
