[package]
name = "rsa_project"
version = "0.1.0"
authors = ["Karl Han <karl-han@iwktd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
rand = "0.5"
num-bigint = { version = "0.2", features = ["rand"] }
clap = "2.33.0"
sha3 = "0.8.2"
